--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title> Nick Rathfelder Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Nick Rathfelder and I am a student in electrical engineering at the University of Waterloo. </p>
+          <p>My name is Nick Rathfelder and I am a student in electrical engineering at the University of Waterloo. I explore my passions for PCB and chip design through my design team work and various side projects. </p>
         </div>
 
         <div class="row">
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 Octobor 2004</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 October 2004</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>519 427 4407</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Waterford, Ontario</span></li>
                 </ul>
@@ -107,7 +107,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Applied Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>nhrathfe@uwaterloo.ca</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nhrathfe@uwaterloo.ca</span></li>
                 </ul>
               </div>
             </div>
