--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1 class="text-light"><a href="index.html">Nick Rathfelder</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/nicky_ricky69/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
