--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Nick Rathfelder</h1>
-      <p>I'm <span class="typed" data-typed-items="Engineer, Designer, Programmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an Engineer,a Designer,a Programmer"></span></p>
     </div>
   </section><!-- End Hero -->
 
