--- a/index.html
+++ b/index.html
@@ -254,11 +254,9 @@
               <h4>Bachelor of Applied Science &amp; Electrical Engineering</h4>
               <h5>2022 - 2027</h5>
               <p><em>University of Waterloo, Waterloo ON</em></p>
-              <ol>
-                <li>GPA: 3.76</li>
-                <li>Deans Honour List: 2A</li>
-                <li>Design Teams: UW Formula Electric</li>
-              </ol>
+              <p>GPA: 3.76</p>
+              <p>Deans Honour List: 2A</p>
+              <p>Design Teams: UW Formula Electric</p>
 
             </div>
             <!--
