--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Nick Rathfelder</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="facebook" target=”_blank”><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100093224299389" class="facebook" target=”_blank”><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/nicky_ricky69/" class="instagram" target=”_blank”><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/nicholas-rathfelder-304542250/" class="linkedin" target=”_blank”><i class="bx bxl-linkedin"></i></a>
         </div>
