--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Nick Rathfelder and I am a student in electrical engineering at the University of Waterloo. I explore my passions for PCB and chip design through my design team work and various side projects. </p>
+          <p>My name is Nick Rathfelder and I am a 2nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skils in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
         </div>
 
         <div class="row">
@@ -96,7 +96,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 October 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>519 427 4407</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>519-427-4407</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Waterford, Ontario</span></li>
                 </ul>
               </div>
@@ -182,14 +182,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Quartus Prime <i class="val">90%</i></span>
+              <span class="skill">LTspice <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PSpice <i class="val">75%</i></span>
+              <span class="skill">Quartus Prime <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
