--- a/index.html
+++ b/index.html
@@ -269,25 +269,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Electrical Engineering Intern</h4>
+              <h5>September 2023 - December 2023</h5>
+              <p><em>Martinrea, Tillsonburg, ON </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Provided support for the engineering team in the maintainence and improvement of the line.</li>
+                <li>Developed a python-based computer vision system for performing visual quality checks on the line.</li>
+                <li>Designed and set up GPIO-triggered serial messaging system using a Raspberry Pi 4.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Process Engineering Intern</h4>
+              <h5>January 2023 - April 2023</h5>
+              <p><em>Stelco, Nanticoke, ON</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Provided the operating team at the Hot Strip Mill insight into daily operations through the creation of Microsoft Power BI reports.</li>
+                <li>Started the development of a MATLAB and PLC based image analysis program for use in the basic oxygen furnace.</li>
+                <li>Revitalized an old environmental emissions detection machine learning project to automate emissions detection jobs.</li>
               </ul>
             </div>
           </div>
