--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>For any and all professional inquiries, please contact me via my email(preferred) or phone.</p>
+          <p>For any and all professional inquiries, please text or email me using the contact information below.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
