--- a/index.html
+++ b/index.html
@@ -300,16 +300,9 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Collection of various PCB design projects designed in Altium and simulated using LTspice.</p>
+          <p>Collection of various personal PCB design projects designed in Altium Designer and simulated using LTspice.</p>
         </div>
 
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-            </ul>
-          </div>
-        </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
