--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               <p><em>University of Waterloo, Waterloo ON</em></p>
               <p>GPA: 3.76</p>
               <p>Deans Honour List: 2A</p>
-              <p>Design Teams: UW Formula Electric</p>
+              <p>Design Teams: UW Baja SAE, UW Formula Electric</p>
 
             </div>
             <!--
@@ -311,7 +311,6 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
