--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -102,10 +102,6 @@
                   <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -115,10 +111,8 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: PCB design</li>
+                <li><strong>Function</strong>: </li>
               </ul>
             </div>
             <div class="portfolio-description">
