--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
+                <a href="assets/img/portfolio/Amplifier3D.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/AmplifierSchem.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
               </div>
             </div>
           </div>
