--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Nick Rathfelder and I am a 2nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
+          <p>Test    My name is Nick Rathfelder and I am a 2nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
         </div>
 
         <div class="row">
