--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Test    My name is Nick Rathfelder and I am a 2nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
+          <p>My name is Nick Rathfelder and I am a 2nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
         </div>
 
         <div class="row">
@@ -308,50 +308,50 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Amplifier3D.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/LED_model.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Amplifier3D.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/AmplifierSchem.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
+                <a href="assets/img/portfolio/LED_model.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LED Controller Model"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/LED_Schem.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="LED Controller Schematic"><i class="bx bx-book-content"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Boost_model.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
+                <a href="assets/img/portfolio/Boost_model.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Boost Converter Model"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Boost_Schem.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Boost Converter Schematic"><i class="bx bx-book-content"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Flyback_model.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
+                <a href="assets/img/portfolio/Flyback_model.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Flyback Converter Model"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Flyback_Schem.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Flyback Converter Schematic"><i class="bx bx-book-content"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/PSU_model.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
+                <a href="assets/img/portfolio/PSU_model.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="AC-DC Power Supply Model"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/PSU_Schem.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="AC-DC Power Supply Schematic"><i class="bx bx-book-content"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Amp_model.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-book-content"></i></a>
+                <a href="assets/img/portfolio/Amp_model.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audio Amplifier Model"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Amp_Schem.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Audio Amplifier Schematic"><i class="bx bx-book-content"></i></a>
               </div>
             </div>
           </div>
