--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Nick Rathfelder</h4>
-              <p><em>Adaptable and innovative electrical engineering student with in-depth experience in PCB design, processor design and testing, and a drive to learn.</em></p>
+              <p><em>Adaptable and innovative electrical engineering student with in-depth experience in PCB design and prototyping and a drive to learn.</em></p>
               <ul>
                 <li>113 Duncombe Rd, Waterford ON</li>
                 <li>(519) 427-4407</li>
@@ -273,9 +273,8 @@
               <h5>January 2025 - April 2025</h5>
               <p><em>Musashi AI, Waterloo, ON </em></p>
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Updated electrical drawings and developed PLC/robot programs for AI automotive inspection machines</li>
+                <li>Upgraded camshaft inspection cell with onboard chatter inspection capabilities for the Automate 2025 trade show</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -283,9 +282,8 @@
               <h5>September 2023 - December 2023</h5>
               <p><em>Martinrea, Tillsonburg, ON </em></p>
               <ul>
-                <li>Provided support for the engineering team in the maintainence and improvement of the line.</li>
-                <li>Developed a python-based computer vision system for performing visual quality checks on the line.</li>
-                <li>Designed and set up GPIO-triggered serial messaging system using a Raspberry Pi 4.</li>
+                <li>Provided support for the engineering team in the maintainence and improvement of the line</li>
+                <li>Set up GPIO-triggered serial messaging using a Raspberry Pi 4</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -293,9 +291,8 @@
               <h5>January 2023 - April 2023</h5>
               <p><em>Stelco, Nanticoke, ON</em></p>
               <ul>
-                <li>Provided the operating team at the Hot Strip Mill insight into daily operations through the creation of Microsoft Power BI reports.</li>
-                <li>Started the development of a MATLAB and PLC based image analysis program for use in the basic oxygen furnace.</li>
-                <li>Revitalized an old environmental emissions detection machine learning project to automate emissions detection jobs.</li>
+                <li>Provided the operating team at the Hot Strip Mill insight into daily operations through the creation of Microsoft Power BI reports</li>
+                <li>Started the development of a MATLAB and PLC based image analysis program for use in the BOF</li>
               </ul>
             </div>
           </div>
