--- a/index.html
+++ b/index.html
@@ -302,7 +302,9 @@
     </section><!-- End Resume Section -->
 
     <section class="side-projects-section" id="side-projects">
-      <h2 class="section-title">Side Projects</h2>
+      <div class="section-title">
+        <h2>Side Projects</h2>
+      </div>
       <div class="side-projects-list">
     
         <!-- Project 1 -->
