--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
     <section class="side-projects-section" id="side-projects">
       <div class="section-title">
-        <h2>Side Projects</h2>
+        <h2 class ="resume-title">Side Projects</h2>
       </div>
       <div class="side-projects-list">
     
