--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
 
     <section class="side-projects-section" id="side-projects">
       <div class="container">
+      <div class="section-title">
         <h2 class ="resume-title">Side Projects</h2>
+      </div>
       <div class="side-projects-list">
     
         <!-- Project 1 -->
