--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
             <div class="side-project-group-title">Control PCB</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="Schematic" alt="">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Schematic</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="images/irrigation2.jpg" alt="Sensor wiring">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Prototype Board</figcaption>
               </figure>
             </div>
@@ -340,11 +340,11 @@
             <div class="side-project-group-title">Wire Harness</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="Schematic" alt="">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Schematic</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="images/irrigation2.jpg" alt="Sensor wiring">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Final Assembly</figcaption>
               </figure>
             </div>
@@ -354,11 +354,11 @@
             <div class="side-project-group-title">Microcontroller Programming</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="images/irrigation3.jpg" alt="Web dashboard">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>IOC File</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="images/irrigation4.jpg" alt="Mobile app">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Main Control Loop</figcaption>
               </figure>
             </div>
@@ -369,11 +369,11 @@
             <div class="side-project-group-title">Mechanical Design</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="images/irrigation5.jpg" alt="Installed system">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Primary Coil Design</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="images/irrigation6.jpg" alt="Healthy plants">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Loading Coil Design</figcaption>
               </figure>
             </div>
@@ -398,11 +398,11 @@
             <div class="side-project-group-title">Control PCB</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="images/amplifier1.jpg" alt="PCB layout">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Schematic</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="images/amplifier2.jpg" alt="PCB fabrication">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>3D Model</figcaption>
               </figure>
             </div>
@@ -412,11 +412,11 @@
             <div class="side-project-group-title">Embedded Systems</div>
             <div class="side-project-images-row">
               <figure class="side-project-image-figure">
-                <img src="images/amplifier3.jpg" alt="Component soldering">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>IOC File</figcaption>
               </figure>
               <figure class="side-project-image-figure">
-                <img src="images/amplifier4.jpg" alt="Assembled board">
+                <img src="assets/img/projects/example.jpg" alt="">
                 <figcaption>Main Control Loop</figcaption>
               </figure>
             </div>
