--- a/index.html
+++ b/index.html
@@ -490,7 +490,13 @@
           </div>
         </div>
 
-      </div>
+      </div>]
+      <p style="margin-top: 24px;">
+        <a href="files/Nick_Rathfelder_Portfolio.pdf" target="_blank" rel="noopener" class="portfolio-download-link">
+          Download Full Portfolio (PDF)
+        </a>
+      </p>
+      
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= 
