--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
       </div>]
       <p style="margin-top: 24px;">
-        <a href="files/Nick_Rathfelder_Portfolio.pdf" target="_blank" rel="noopener" class="portfolio-download-link">
+        <a href="assets/Portfolio050325.pdf" target="_blank" rel="noopener" class="portfolio-download-link">
           Download Full Portfolio (PDF)
         </a>
       </p>
