--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#side-projects" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Projects</span></a></li>
+          <li><a href="#side-projects" class="nav-link scrollto"><i class="bx bx-chip"></i> <span>Projects</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -305,7 +305,7 @@
     <section class="side-projects-section" id="side-projects">
       <div class="container">
       <div class="section-title">
-        <h2 class ="resume-title">Side Projects</h2>
+        <h2 class ="resume-title">Projects</h2>
       </div>
       <div class="side-projects-list">
     
