--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Nick Rathfelder</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/profile.php?id=100093224299389" class="facebook" target=”_blank”><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/nicky_ricky69/" class="instagram" target=”_blank”><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/nicholas-rathfelder-304542250/" class="linkedin" target=”_blank”><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100093224299389" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/nicky_ricky69/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/nicholas-rathfelder-304542250/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Nick Rathfelder and I am a 3nd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
+          <p>My name is Nick Rathfelder and I am a 3rd year electrical engineering student currently studying at the University of Waterloo. I am an adaptable and results driven student in search of opportunities to explore my passions for PCB and chip design. My skills in circuit design and programming are constantly being improved through my design team work and various side projects.  </p>
         </div>
 
         <div class="row">
@@ -97,14 +97,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 October 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>519-427-4407</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Waterford, Ontario</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>Available upon request</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Applied Science in Electrical Engineering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Graduation Date:</strong> <span>June 2027</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nhrathfe@uwaterloo.ca</span></li>
                 </ul>
               </div>
@@ -115,54 +115,6 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= 
-    <section id="facts" class="facts">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="count-box">
-              <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
-  -->
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
@@ -238,25 +190,14 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Summary</h3>
-            <div class="resume-item pb-0">
-              <h4>Nick Rathfelder</h4>
-              <p><em>Adaptable and innovative electrical engineering student with in-depth experience in PCB design and prototyping and a drive to learn.</em></p>
-              <ul>
-                <li>113 Duncombe Rd, Waterford ON</li>
-                <li>(519) 427-4407</li>
-                <li>nhrathfe@uwaterloo.ca</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Applied Science &amp; Electrical Engineering</h4>
               <h5>2022 - 2027</h5>
               <p><em>University of Waterloo, Waterloo ON</em></p>
               <p>GPA: 3.82</p>
-              <p>Term Distinction: 2A, 2B</p>
-              <p>Design Teams: UW Baja SAE, Waterloo Aerial Robotics Group</p>
+              <p>Term Distinction: 2A, 2B, 3A</p>
+              <p>Design Teams: UW Baja SAE</p>
 
             </div>
             <!--
@@ -269,13 +210,22 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>FPGA Engineering Intern</h4>
+              <h5>September 2025 - December 2025</h5>
+              <p><em>Curtiss-Wright Defense Solutions, Kanata, ON</em></p>
+              <ul>
+                <li>Developed RTL and integrated 3rd party IP to support the design, simulation and testing of mission-critical aerospace and defense systems</li>
+                <li>Implemented a UART-based debug interface to provide visibility into internal hardware states during restricted-access environmental testing</li>
+              </ul>
+            </div>
              <div class="resume-item">
               <h4>Controls and Electrical Engineering Intern</h4>
               <h5>January 2025 - April 2025</h5>
               <p><em>Musashi AI, Waterloo, ON </em></p>
               <ul>
                 <li>Updated electrical drawings and developed PLC/robot programs for AI automotive inspection machines</li>
-                <li>Upgraded camshaft inspection cell with onboard chatter inspection capabilities for the Automate 2025 trade show</li>
+                <li>Upgraded the Automate 2025 tradeshow inspection cell to allow for onboard chatter inspection of automotive camshafts</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -283,8 +233,8 @@
               <h5>September 2023 - December 2023</h5>
               <p><em>Martinrea, Tillsonburg, ON </em></p>
               <ul>
-                <li>Provided support for the engineering team in the maintainence and improvement of the line</li>
-                <li>Set up GPIO-triggered serial messaging using a Raspberry Pi 4</li>
+                <li>Provided support for the engineering team in the maintainence and improvement of the assembly line</li>
+                <li>Integrated GPIO-triggered serial messaging into the in-house weld inspection system to improve system response time</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -293,7 +243,7 @@
               <p><em>Stelco, Nanticoke, ON</em></p>
               <ul>
                 <li>Provided the operating team at the Hot Strip Mill insight into daily operations through the creation of Microsoft Power BI reports</li>
-                <li>Started the development of a MATLAB and PLC based image analysis program for use in the BOF</li>
+                <li>Started the development of a MATLAB and PLC based image analysis program to monitor slag build up on the walls of the BOF</li>
               </ul>
             </div>
           </div>
@@ -491,7 +441,7 @@
           </div>
         </div>
 
-      </div>]
+      </div>
       <p style="margin-top: 24px;">
         <a href="assets/Portfolio050325.pdf" target="_blank" rel="noopener" class="portfolio-download-link">
           Download Full Portfolio (PDF)
@@ -500,136 +450,6 @@
       
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section ======= 
-    <section id="services" class="services">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
-  -->
-
-    <!-- ======= Testimonials Section ======= 
-    <section id="testimonials" class="testimonials section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
-              </div>
-            </div><!-- End testimonial item 
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-              </div>
-            </div><!-- End testimonial item 
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-              </div>
-            </div><!-- End testimonial item 
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item 
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-              </div>
-            </div><!-- End testimonial item 
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
-  -->
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -658,19 +478,13 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 (519)-427-4407</p>
+                <p> Available upon request</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5790.879798908452!2d-80.54743252435289!3d43.4722892641137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf6ad02edccff%3A0xdd9df23996268e17!2sUniversity%20of%20Waterloo!5e0!3m2!1sen!2sca!4v1716300289403!5m2!1sen!2sca" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
-
-          
-
-
-
-
         </div>
 
       </div>
